syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message DJDEPPHEHCP {
	uint32 start_time = 1;
	uint32 end_time = 2;
}
