syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "MusicBeatmapNote.proto";

message MusicBeatmapList {
	repeated MusicBeatmapNote beatmap_note_list = 1;
}
